--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,10 @@
 
   <body>
     <header>
-      <h1 class="title">prefeitura</h1>
+      <button>O</button>
+      <button>A+</button>
+      <button>a-</button>
+      <button>Acessibilidade</button>
     </header>
 
     <main>
