header para mobile

--- a/src/index.html
+++ b/src/index.html
@@ -10,14 +10,22 @@
 
   <body>
     <header>
-      <button>O</button>
-      <button>A+</button>
-      <button>a-</button>
-      <button>Acessibilidade</button>
+      <div class="header-buttons">
+        <button class="header-button" type="button">O</button>        
+        <button class="header-button" type="button">A+</button>
+        <button class="header-button" type="button">a-</button>
+        <button class="header-button" type="button">Acessibilidade</button>
+      </div>
+      <div class="header-links">
+        <a class="header-link" href="#">Ir para o conteúdo</a>
+        <a class="header-link" href="#">Ir para o menu</a>
+        <a class="header-link" href="#">Ir para a busca</a>
+        <a class="header-link" href="#">Ir para o rodapé</a>
+      </div>
     </header>
 
     <main>
-      <h2>main</h2>
+      <h2>main</h2>      
     </main>
 
     <footer>
