--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,17 @@
       <h4>12 de junho de 2019</h4>
       <input type="search" name="search-header" placeholder="busca" class="input-search">
     </section>
+    <nav>
+      <a class="nav-link" href="#">A cidade</a>
+      <a class="nav-link" href="#">Secretarias</a>
+      <a class="nav-link" href="#">Turismo</a>
+      <a class="nav-link" href="#">Noticias</a>
+      <a class="nav-link" href="#">Serviços</a>
+      <a class="nav-link" href="#">Licitação</a>
+      <a class="nav-link" href="#">Editais</a>
+      <a class="nav-link" href="#">Diario Oficial</a>
+      <a class="nav-link" href="#">Concursos</a>
+    </nav>
 
     <main>
       <h2>main</h2>      
