finalização dos destaques

--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,8 @@
           />
         </div>
       </section>
-      <section class="blue-container"></section>
+      <section class="blue-container">
+      </section>
       <section class="news"></section>
       <section class="galery"></section>
       <section class="tourism"></section>
