alinhamento links no blue container

--- a/src/index.html
+++ b/src/index.html
@@ -76,6 +76,11 @@
         </div>
       </section>
       <section class="blue-container">
+        <a class="blue-container-links" href="#">Transparência</a>
+        <a class="blue-container-links" href="#">Serviços para empresa</a>
+        <a class="blue-container-links" href="#">Serviços ao cidadão</a>
+        <a class="blue-container-links" href="#">Serviços ao servidor</a>
+        <a class="blue-container-links" href="#">Segunda via de contas</a>
       </section>
       <section class="news"></section>
       <section class="galery"></section>
