--- a/src/index.html
+++ b/src/index.html
@@ -76,11 +76,26 @@
         </div>
       </section>
       <section class="blue-container">
-        <a class="blue-container-links" href="#">Transparência</a>
-        <a class="blue-container-links" href="#">Serviços para empresa</a>
-        <a class="blue-container-links" href="#">Serviços ao cidadão</a>
-        <a class="blue-container-links" href="#">Serviços ao servidor</a>
-        <a class="blue-container-links" href="#">Segunda via de contas</a>
+        <a class="blue-container-links" href="#">
+          <img class="blue-container-icon" src="./assets/icon-transparencia.png" />
+          <p>Transparência</p>
+        </a>
+        <a class="blue-container-links" href="#">
+          <img class="blue-container-icon" src="./assets/icon-empresa.png" />
+          Serviços para empresa
+        </a>
+        <a class="blue-container-links" href="#">
+          <img class="blue-container-icon" src="./assets/icon-familia.png" />
+          Serviços ao cidadão
+        </a>
+        <a class="blue-container-links" href="#">
+          <img class="blue-container-icon" src="./assets/icon-usuario.png" />
+          Serviços ao servidor
+        </a>
+        <a class="blue-container-links" href="#">
+          <img class="blue-container-icon" src="./assets/icon-conta.png" />
+          Segunda via de contas
+        </a>
       </section>
       <section class="news"></section>
       <section class="galery"></section>
