alinhamento buttons desktop

--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,10 @@
       </section>
       <section class="blue-container">
         <a class="blue-container-links" href="#">
-          <img class="blue-container-icon" src="./assets/icon-transparencia.png" />
+          <img
+            class="blue-container-icon"
+            src="./assets/icon-transparencia.png"
+          />
           <p>Transparência</p>
         </a>
         <a class="blue-container-links" href="#">
@@ -101,7 +104,24 @@
       <section class="galery"></section>
       <section class="tourism"></section>
       <section class="events-edicts"></section>
-      <section class="buttons-container"></section>
+      <section class="buttons-container">
+        <a class="buttons-container-link lixo" href="#">
+          <img class="button-icon" src="./assets/icon-lixo.png" />
+          coleta do lixo
+        </a>
+        <a class="buttons-container-link sic" href="#">
+          <img class="button-icon" src="./assets/icon-info.png" />
+          sic
+        </a>
+        <a class="buttons-container-link pat" href="#">
+          <img class="button-icon" src="./assets/icon-mala.png" />
+          pat
+        </a>
+        <a class="buttons-container-link ouvidoria" href="#">
+          <img class="button-icon" src="./assets/ouvidoria.png" />
+          ouvidoria online
+        </a>
+      </section>
     </main>
 
     <footer class="home-footer">
