alinhamento main news imgs

--- a/src/index.html
+++ b/src/index.html
@@ -137,23 +137,48 @@
       </section>
       <section class="news-container">
         <h2>Notícias</h2>
-        <div class="main-news-img">
-          <img class="news-img" src="./assets/praça.jpg" alt="praça" />
-          <a href="#"></a>
-            <h6 class="news-caption date">Dia 20 de março</p>
-            <h5 class="news-caption info">
-              Cidade recebe o Projeto Viva a Praça! Revitalização e novas
-              estruturas a partir do ano que vem
-            </h5>
-            </a
-          >
-        </div>
-        <div>          
-        </div>
-        
-        <!-- -->
-        <!-- https://images.unsplash.com/photo-1592660716763-09efba6db4e3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=580&q=80 --> 
+        <div class="news-imgs-container">
+          <div class="main-news-imgs">
+            <img class="main-news-img" src="./assets/praça.jpg" alt="praça" />
+            <a href="#">
+              <h6 class="news-caption date">Dia 20 de março</p>
+              <h5 class="news-caption info">
+                Cidade recebe o Projeto Viva a Praça! Revitalização e novas
+                estruturas a partir do ano que vem
+              </h5>
+            </a>
+          </div>
+          <div class="secondary-news-imgs-container">
+            <div class="secondary-news-imgs">
+              <img 
+              class="secondary-news-img"
+              src="https://images.unsplash.com/photo-1592660716763-09efba6db4e3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=580&q=80"
+              alt="praça"
+              />
+              <a href="#">
+                <h6 class="news-caption date">Dia 20 de março</p>
+                <h5 class="news-caption info">
+                  Foi aberta as inscrições para as feiras de Natal. São vários espaços disponíveis.
+                </h5>
+              </a>
+            </div>
+            <div class="secondary-news-imgs">
+              <img 
+              class="secondary-news-img"
+              src="https://images.unsplash.com/photo-1592660716763-09efba6db4e3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=580&q=80"
+              alt="praça"
+              />
+              <a href="#">
+                <h6 class="news-caption date">Dia 20 de março</p>
+                <h5 class="news-caption info">
+                  Foi aberta as inscrições para as feiras de Natal. São vários espaços disponíveis.
+                </h5>
+              </a>
+            </div>
+          </div>
+        </div>        
       </section>
+      
       <section class="galery"></section>
       <section class="tourism"></section>
       <section class="events-edicts"></section>
