--- a/src/index.html
+++ b/src/index.html
@@ -177,6 +177,7 @@
             </div>
           </div>
         </div>        
+        <button class="see-all-button" type="button">Veja todos</button>
       </section>
       
       <section class="galery"></section>
