galeria de imagens responsiva

--- a/src/index.html
+++ b/src/index.html
@@ -180,7 +180,65 @@
         <button class="see-all-button" type="button">Veja todos</button>
       </section>
       
-      <section class="galery"></section>
+      <section class="galery-container">
+        <h2>Galeria</h2>
+        <div class="galery-imgs">
+          <div class="img-galery-container">
+            <img 
+              class="img-galery"
+              src="./assets/paisagem.jpg" 
+              alt="paisagem" 
+              width="120px"
+              height="120px"
+            />
+          </div>          
+          <div class="img-galery-container">
+            <img 
+              class="img-galery"
+              src="./assets/cidade.jpg" 
+              alt="cidade" 
+              width="120px"
+              height="120px"
+            />
+          </div>
+          <div class="img-galery-container">
+            <img 
+              class="img-galery"
+              src="./assets/jardim.jpg" 
+              alt="jardim" 
+              width="120px"
+              height="120px"
+            />
+          </div>          
+          <div class="img-galery-container">
+            <img 
+              class="img-galery"
+              src="./assets/feira.jpg" 
+              alt="frutas na feira" 
+              width="120px"
+              height="120px"
+            />  
+          </div>
+          <div class="img-galery-container">
+            <img 
+              class="img-galery"
+              src="./assets/igreja.jpg" 
+              alt="igreja" 
+              width="120px"
+              height="120px"
+            />
+          </div>
+          <div class="img-galery-container">
+            <img 
+              class="img-galery"
+              src="./assets/flores.jpg" 
+              alt="flores no campo" 
+              width="120px"
+              height="120px"
+            />
+          </div>         
+        </div>
+      </section>
       <section class="tourism"></section>
       <section class="events-edicts"></section>
       <section class="buttons-container">
