--- a/src/index.html
+++ b/src/index.html
@@ -182,62 +182,71 @@
       
       <section class="galery-container">
         <h2>Galeria</h2>
-        <div class="galery-imgs">
-          <div class="img-galery-container">
-            <img 
-              class="img-galery"
-              src="./assets/paisagem.jpg" 
-              alt="paisagem" 
-              width="120px"
-              height="120px"
-            />
-          </div>          
-          <div class="img-galery-container">
-            <img 
-              class="img-galery"
-              src="./assets/cidade.jpg" 
-              alt="cidade" 
-              width="120px"
-              height="120px"
-            />
+        <div class="container-galery-video">
+          <div class="galery-imgs">
+            <div class="img-galery-container">
+              <img 
+                class="img-galery"
+                src="./assets/paisagem.jpg" 
+                alt="paisagem" 
+                width="120px"
+                height="120px"
+              />
+            </div>          
+            <div class="img-galery-container">
+              <img 
+                class="img-galery"
+                src="./assets/cidade.jpg" 
+                alt="cidade" 
+                width="120px"
+                height="120px"
+              />
+            </div>
+            <div class="img-galery-container">
+              <img 
+                class="img-galery"
+                src="./assets/jardim.jpg" 
+                alt="jardim" 
+                width="120px"
+                height="120px"
+              />
+            </div>          
+            <div class="img-galery-container">
+              <img 
+                class="img-galery"
+                src="./assets/feira.jpg" 
+                alt="frutas na feira" 
+                width="120px"
+                height="120px"
+              />  
+            </div>
+            <div class="img-galery-container">
+              <img 
+                class="img-galery"
+                src="./assets/igreja.jpg" 
+                alt="igreja" 
+                width="120px"
+                height="120px"
+              />
+            </div>
+            <div class="img-galery-container">
+              <img 
+                class="img-galery"
+                src="./assets/flores.jpg" 
+                alt="flores no campo" 
+                width="120px"
+                height="120px"
+              />
+            </div>         
           </div>
-          <div class="img-galery-container">
-            <img 
-              class="img-galery"
-              src="./assets/jardim.jpg" 
-              alt="jardim" 
-              width="120px"
-              height="120px"
-            />
-          </div>          
-          <div class="img-galery-container">
-            <img 
-              class="img-galery"
-              src="./assets/feira.jpg" 
-              alt="frutas na feira" 
-              width="120px"
-              height="120px"
-            />  
-          </div>
-          <div class="img-galery-container">
-            <img 
-              class="img-galery"
-              src="./assets/igreja.jpg" 
-              alt="igreja" 
-              width="120px"
-              height="120px"
-            />
-          </div>
-          <div class="img-galery-container">
-            <img 
-              class="img-galery"
-              src="./assets/flores.jpg" 
-              alt="flores no campo" 
-              width="120px"
-              height="120px"
-            />
-          </div>         
+          <div class="video-container">
+            <iframe class="video" id="video" width="300" height="230" src="https://www.youtube-nocookie.com/embed/NJuSStkIZBg?playlist=NJuSStkIZBg&autoplay=1&iv_load_policy=3&loop=1&modestbranding=1&start=">
+            </iframe>
+            <h5>Cidade recebe Viva a Praça!</h5>
+          </div>     
         </div>
+           
+        <button class="see-all-button" type="button">Veja todos</button>
       </section>
       <section class="tourism"></section>
       <section class="events-edicts"></section>
