--- a/src/index.html
+++ b/src/index.html
@@ -244,11 +244,38 @@
             </iframe>
             <h5>Cidade recebe Viva a Praça!</h5>
           </div>     
-        </div>
-           
+        </div>           
         <button class="see-all-button" type="button">Veja todos</button>
       </section>
-      <section class="tourism"></section>
+      <section class="tourism-container">
+        <h2>Turismo</h2>
+        <div class="tourism-imgs">
+          <div class="img-tourism-container">
+            <img
+            class="img-tourism"            
+            src="./assets/pontos-turisticos.jpg"
+            alt="igreja"
+          />
+          <a href="#" class="tourism-links">Pontos Turísticos</a>
+          </div>          
+          <div class="img-tourism-container">
+            <img 
+            class="img-tourism"
+            src="./assets/resturantes.jpg"
+            alt="comidas"
+          />
+          <a href="#" class="tourism-links">Restaurantes</a>
+          </div>          
+          <div class="img-tourism-container">
+            <img 
+            class="img-tourism"
+            src="./assets/hospedagens.jpg"
+            alt="hospedagens"            
+          />
+          <a href="#" class="tourism-links">Hospedagens</a>
+          </div>          
+        </div>
+      </section>
       <section class="events-edicts"></section>
       <section class="buttons-container">
         <a class="buttons-container-link lixo" href="#">
