--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,9 @@
   <body>
     <header>
       <div class="header-buttons">
-        <button class="header-button" type="button">O</button>
+        <button class="header-button darkmode" type="button">
+          <img class="half-circle-icon" src="./assets/circle.png" alt="círculo" />
+        </button>
         <button class="header-button" type="button">A+</button>
         <button class="header-button" type="button">a-</button>
         <button class="header-button" type="button">Acessibilidade</button>
