--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
 
-  <body>
+  <body id="body">
     <header>
       <div class="header-buttons">
-        <button class="header-button darkmode" type="button">
+        <button id="darkModeBtn" class="header-button darkmode" type="button">
           <img class="half-circle-icon" src="./assets/circle.png" alt="círculo" />
         </button>
         <button class="header-button" type="button">A+</button>
