finalização das features

--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,8 @@
         <button id="darkModeBtn" class="header-button darkmode" type="button">
           <img class="half-circle-icon" src="./assets/circle.png" alt="círculo" />
         </button>
-        <button class="header-button" type="button">A+</button>
-        <button class="header-button" type="button">a-</button>
+        <button id="increaseFontBtn" class="header-button" type="button">A+</button>
+        <button id="decreaseFontBtn" class="header-button" type="button">a-</button>
         <button class="header-button" type="button">Acessibilidade</button>
       </div>
       <div class="header-links">
