finalizao dos eventos e editais

--- a/src/index.html
+++ b/src/index.html
@@ -278,7 +278,63 @@
           </div>          
         </div>
       </section>
-      <section class="events-edicts"></section>
+      <section class="events-edicts">
+        <div class="events-container">
+          <h2 class="events-edicts-title">Eventos</h2>
+          <ul>
+            <li>
+              <a href="#">
+                <p class="events-links titulo">Leitura ao ar livre</p>
+                <p class="events-links">Praça São João do Reinaldo das 15h as 19h</p> 
+              </a>              
+            </li>
+            <li>
+              <a href="#">
+                <p class="events-links titulo">Feiras das Malhas e Cervejas</p>
+                <p class="events-links">Praça São João do Reinaldo das 15h as 19h</p> 
+              </a>              
+            </li>
+            <li>
+              <a href="#">
+                <p class="events-links titulo">Festa da Maçã e Morango</p>
+                <p class="events-links">Praça São João do Reinaldo das 15h as 19h</p> 
+              </a>              
+            </li>            
+          </ul>       
+          <button class="see-all-button evnts" type="button">Veja todos</button>
+        </div>
+        <div class="edicts-container">
+          <h2 class="events-edicts-title">Editais</h2>
+          <ul>
+            <li>
+              <a href="#">
+                <p class="edicts-links titulo">Tomada de preços nº 001/2019</p>
+                <p class="edicts-links">Edital nº 006/2019</p> 
+              </a>              
+            </li>
+            <li>
+              <a href="#">
+                <p class="edicts-links titulo">Tomada de preços nº 001/2019</p>
+                <p class="edicts-links">Edital nº 006/2019</p> 
+              </a>              
+            </li>
+            <li>
+              <a href="#">
+                <p class="edicts-links titulo">Tomada de preços nº 001/2019</p>
+                <p class="edicts-links">Edital nº 006/2019</p> 
+              </a>              
+            </li>
+            <li>
+              <a href="#">
+                <p class="edicts-links titulo">Tomada de preços nº 001/2019</p>
+                <p class="edicts-links">Edital nº 006/2019</p> 
+              </a>              
+            </li>
+          </ul>
+          <button class="see-all-button edcts" type="button">Veja todos</button>
+        </div>
+        
+      </section>
       <section class="buttons-container">
         <a class="buttons-container-link lixo" href="#">
           <img
